# rust-mongodb-graphql

./: Cargo.toml
src/: main.rs
src/resolvers/: user_resolver.rs
src/schemas/: user_schema.rs
src/services/: user_service.rs
src/utils/: db.rs
